style: folder and file names refactor and add README.md

--- a/topic1-basics/project1-about-me/index.html
+++ b/topic1-basics/project1-about-me/index.html
@@ -6,8 +6,10 @@
   <body style="font-family: Comic Sans MS; text-align: center">
     <h1>Это моё портфолио!</h1>
     <p>Ниже странички, содержащие информацию обо мне и моих интересах :)</p>
-    <a href="business_card.html">Информация обо мне</a>
+    <a href="../project2-business-card/index.html">Информация обо мне</a>
     <br />
-    <a href="music_release.html">Мои любимые музыкальные альбомы</a>
+    <a href="../project3-music-releases/index.html"
+      >Мои любимые музыкальные альбомы</a
+    >
   </body>
 </html>
