--- a/topic1-basics/project2-business-card/index.html
+++ b/topic1-basics/project2-business-card/index.html
@@ -4,7 +4,7 @@
     <title>ZØNIXX Business Card</title>
   </head>
   <body style="text-align: center; font-family: 'Comic Sans MS'">
-    <a href="about.html">НА ГЛАВНУЮ</a>
+    <a href="../project1-about-me/index.html">НА ГЛАВНУЮ</a>
     <h1>Дмитрий "ZØNIXX" Квашнин</h1>
     <h2>фронтэнд-разработчик, музыкант</h2>
     <img
