--- a/topic1-basics/project3-music-releases/index.html
+++ b/topic1-basics/project3-music-releases/index.html
@@ -4,7 +4,7 @@
     <title>Мои любимые альбомы</title>
   </head>
   <body style="text-align: center; font-family: 'Comic Sans MS'">
-    <a href="about.html">НА ГЛАВНУЮ</a>
+    <a href="../project1-about-me/index.html">НА ГЛАВНУЮ</a>
     <h1>Лучшие из лучших</h1>
     <h2>Электронная музыка</h2>
     <h3 style="text-decoration: underline">
